<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layerType="software">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="169dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/channel_thumbnail"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/channel_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nexon_gothic_bold"
            android:maxLines="2"
            android:text="@string/channelName"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/channel_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nexon_gothic"
            android:text="@string/subscribers"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/channel_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/channel_title" />

        <TextView
            android:id="@+id/channel_subscribers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nexon_gothic"
            android:text="@string/subscribers"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/channel_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nexon_gothic"
            android:text="@string/contentNumber"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/channel_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/contents_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nexon_gothic"
            android:text="@string/contentNumber"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/channel_subscribers" />

        <Button
            android:id="@+id/go_playlist"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_rounding"
            android:fontFamily="@font/nexon_gothic_bold"
            android:text="@string/channelInfo"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toEndOf="@+id/contents_number"
            app:layout_constraintTop_toBottomOf="@+id/channel_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>